# autonomous_rc_car_2026

./: avocardo_2026.m
src/arduino_codes/: README.md
src/arduino_codes/Drive_Arduino/: Drive_Arduino.ino
src/arduino_codes/Ultrasonic/: Ultrasonic.ino
src/arduino_codes/Wheel_Encoders/: Wheel_Encoders.ino
src/car_bringup/: CMakeLists.txt  README.md  package.xml
src/car_bringup/launch/: all_systems.launch.py  bringup.launch.py
src/car_description/: CMakeLists.txt  README.md  package.xml
src/car_description/launch/: display.launch.py
src/car_description/meshes/: Wheel_Left.stl  Wheel_Right.stl
src/car_description/urdf/: car.urdf
src/cone_detection_model/: README.md
src/cone_detection_model/dataset_yolov11/: README.dataset.txt  README.roboflow.txt
src/cone_detection_model/dataset_yolov11/test/labels/: IMG_6689_mov-0024_jpg.rf.e3e38f4f357cded25f3480d3de3f2a01.txt  IMG_6689_mov-0048_jpg.rf.806d8b3d2a88eed54635f3086050229d.txt  IMG_6689_mov-0057_jpg.rf.abfb37b378575404823ca25a4f334d0a.txt
src/cone_detection_model/dataset_yolov11/train/labels/: IMG_6689_mov-0000_jpg.rf.f620afa6f6fc8be4599f4c2e1e40646e.txt  IMG_6689_mov-0004_jpg.rf.93339ec264d12873c735c3040be63d16.txt  IMG_6689_mov-0004_jpg.rf.dc9f7911d976d7e2a91fac1feaf931b9.txt  IMG_6689_mov-0008_jpg.rf.9679b530562d7164d46b38a71a0008b1.txt  IMG_6689_mov-0008_jpg.rf.c464a10ef05ccf13f1c7f6490fa1ce2e.txt  IMG_6689_mov-0008_jpg.rf.f9d9d012f769178654a4ad72b61440b9.txt  IMG_6689_mov-0009_jpg.rf.0c5b3fb6af26f1be34a5bef55c037046.txt  IMG_6689_mov-0009_jpg.rf.8375e51b3457c5da40cf41e9e1037793.txt  IMG_6689_mov-0010_jpg.rf.b32b0eac2e9c1ad2d03cba31e701abe2.txt  IMG_6689_mov-0012_jpg.rf.81b6ec9437d998c2b660c15c3938ae5b.txt  IMG_6689_mov-0013_jpg.rf.e32d7968e26d8cc86e6644511b19f438.txt  IMG_6689_mov-0014_jpg.rf.2f8b1e77c5a8a66fb455babf29001729.txt  IMG_6689_mov-0015_jpg.rf.ab098eff11fa4e2e346cc60fd7596ec1.txt  IMG_6689_mov-0016_jpg.rf.91e9704d8e0a5de358d6af9670b5128b.txt  IMG_6689_mov-0017_jpg.rf.f175570ee8076103b4775bb3a4ce60b8.txt  IMG_6689_mov-0018_jpg.rf.14be8664301eaa3cec78de700e0e5a64.txt  IMG_6689_mov-0018_jpg.rf.734a62a1bddbb0effe3184bcede0e9ca.txt  IMG_6689_mov-0019_jpg.rf.d07f5f32f8e8e601782c0c966d2085bf.txt  IMG_6689_mov-0019_jpg.rf.eb1130fc52d0326c417e9d7b074437a1.txt  IMG_6689_mov-0021_jpg.rf.8c2cbfaf19f79fee877a548ff1c14962.txt  IMG_6689_mov-0022_jpg.rf.45b30638304f2e5c0a1b54f11cda1f84.txt  IMG_6689_mov-0022_jpg.rf.c65843d05132ff1cede08d4456206af1.txt  IMG_6689_mov-0023_jpg.rf.1d63e545343f2590a7b018334af1b344.txt  IMG_6689_mov-0025_jpg.rf.53178c097e1d0e7703e67d60fca7340b.txt  IMG_6689_mov-0025_jpg.rf.e35864804b6e7dc42695698ebd48919c.txt  IMG_6689_mov-0026_jpg.rf.4c0eb1b530edc54c6f890bcf58a1ca8d.txt  IMG_6689_mov-0026_jpg.rf.9476ee3fb2d4642a7cb29404ecca75ee.txt  IMG_6689_mov-0026_jpg.rf.cd0ef08e0b177f937d18752fbd1e4200.txt  IMG_6689_mov-0027_jpg.rf.0fc5dd9a19402d84b3931c61d997eec1.txt  IMG_6689_mov-0027_jpg.rf.e6246fe7b741a5249adba8907515326f.txt  IMG_6689_mov-0028_jpg.rf.d89ee8920110177e3fd25bc0d89e6ea0.txt  IMG_6689_mov-0029_jpg.rf.789e8a52587e27275b652bfe080d3657.txt  IMG_6689_mov-0032_jpg.rf.8046018b1059259fe1d24b043a28a75e.txt  IMG_6689_mov-0033_jpg.rf.ed3907e53dd9f9c877e926012e7b5772.txt  IMG_6689_mov-0034_jpg.rf.b9978217fdc8832f939650a7e6048932.txt  IMG_6689_mov-0037_jpg.rf.571f62a5229a4ead314c5aff6c340d14.txt  IMG_6689_mov-0037_jpg.rf.d9c160ba07c0633466eb9e24cc60d427.txt  IMG_6689_mov-0038_jpg.rf.52b73468c01e72195701e3e6a34fc200.txt  IMG_6689_mov-0038_jpg.rf.eb370213bed5cf71fa507d45b6ffc6f7.txt  IMG_6689_mov-0044_jpg.rf.4c9d05771bcb9ed461146688a810937c.txt  (+19 more)
src/cone_detection_model/dataset_yolov11/valid/labels/: IMG_6689_mov-0001_jpg.rf.ef198f067cae093b3c3a518ecdab7b57.txt  IMG_6689_mov-0003_jpg.rf.5014a7d427264cded0af31cc91a5d5e3.txt  IMG_6689_mov-0030_jpg.rf.bbef578e0e3750690266e2df1795f72b.txt  IMG_6689_mov-0039_jpg.rf.ea61ba26e8209f2fa9b05e0a89c505ed.txt  IMG_6689_mov-0063_jpg.rf.23f9ca897bd7678b04a76e431ce3d59d.txt
src/cone_detection_model/dataset_yolov8/: README.roboflow.txt  data.yaml
src/cone_detection_model/dataset_yolov8/test/labels/: IMG_6689_mov-0006_jpg.rf.ac4e11bcfd670e751a2cc4333e4c5ddd.txt  IMG_6689_mov-0052_jpg.rf.23a33190c342726aa59647c6be0e296f.txt  IMG_6689_mov-0064_jpg.rf.1880753df3a9d3267d90c8c50fa7adb6.txt
src/cone_detection_model/dataset_yolov8/train/labels/: IMG_6689_mov-0000_jpg.rf.101fac0acf10d26071109defe5bce07f.txt  IMG_6689_mov-0000_jpg.rf.8ab6f9a5555d19e01640b33f39d764cc.txt  IMG_6689_mov-0004_jpg.rf.c92c7d5e44b3a50d752fdcbff25bad97.txt  IMG_6689_mov-0005_jpg.rf.038a5bec2288bb5ced3bb3e9ac5f5523.txt  IMG_6689_mov-0005_jpg.rf.904148b2b07e797514c03d81c779e6d4.txt  IMG_6689_mov-0005_jpg.rf.f38212dc92aa04447e38ba4524759848.txt  IMG_6689_mov-0009_jpg.rf.25bf4f15e25d41a2979f62c25425ac77.txt  IMG_6689_mov-0010_jpg.rf.687c22587a1eb7575fe8da63e52e595e.txt  IMG_6689_mov-0010_jpg.rf.bee1d9de6a83d448c2e98661f2c0f07d.txt  IMG_6689_mov-0012_jpg.rf.bd0eaa4c91fd187d8d913a0e42596662.txt  IMG_6689_mov-0013_jpg.rf.3627f0b2e7c9c31410113536b3aad6c9.txt  IMG_6689_mov-0013_jpg.rf.fa24ec654562a120ba9cf4059866c903.txt  IMG_6689_mov-0014_jpg.rf.0e4785740fc631c5e2c6e5e70bf5cd1a.txt  IMG_6689_mov-0014_jpg.rf.15162a0ac1af0679d2189af8695e9470.txt  IMG_6689_mov-0015_jpg.rf.b14f697c1d3e8eb32124e523b165916c.txt  (+59 more)
src/cone_detection_model/model/best/: data.pkl
src/cone_detector/: CMakeLists.txt  README.md  package.xml
src/cone_detector/scripts/: yolo_node.py
src/drive_control/: CMakeLists.txt  README.md  package.xml
src/drive_control/scripts/: drive_node.py
src/odometry_publisher/: CMakeLists.txt  README.md  package.xml
src/odometry_publisher/scripts/: car_odometry.py
src/pylon_instant_camera/: CMakeLists.txt  README.md
src/pylon_instant_camera/src/: main.cpp
src/rplidar_ros2/launch/: rplidar.launch.py
src/rplidar_ros2/src/: rplidar_node.cpp
src/ultrasonic_sensor/: CMakeLists.txt  README.md  package.xml
src/ultrasonic_sensor/scripts/: ultrasonic_node.py
src/wheel_encoder/: CMakeLists.txt  README.md  package.xml
src/wheel_encoder/scripts/: wheel_encoder_node.py
(+305 files in other folders)
