<?xml version="1.0"?>
<package format="3">
  <name>cone_detector</name>
  <version>0.0.1</version>
  <description>YOLOv8 cone detection using ROS 2 and Python</description>
  <maintainer email="shahzad.rasheed@students.fh-wels.at">Shahzad Rasheed</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- System/ROS packages -->
  <exec_depend>python3-opencv</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

