<package format="3">
  <name>ultrasonic_sensor</name>
  <version>0.1.0</version>
  <description>ROS 2 package for reading ultrasonic sensors from Arduino</description>
  <maintainer email="shahzad.rasheed@students.fh-wels.at">Shahzad Rasheed</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

